check for SubmissionEdit permission before allowing a user to claim a submission for judging/publishing

--- a/TASVideos/Pages/Submissions/View.cshtml
+++ b/TASVideos/Pages/Submissions/View.cshtml
@@ -15,8 +15,13 @@
 	string statusColor = StatusColor(Model.Submission.Status);
 
 	bool canClaimAsJudge = ViewData.UserHas(PermissionTo.JudgeSubmissions)
+		&& ViewData.UserHas(PermissionTo.EditSubmissions)
 		&& Model.Submission.Status == SubmissionStatus.New
 		&& Model.Submission.Authors.All(a => a != User.Name());
+
+	bool canClaimAsPublisher = ViewData.UserHas(PermissionTo.PublishMovies)
+		&& ViewData.UserHas(PermissionTo.EditSubmissions)
+		&& Model.Submission.Status == SubmissionStatus.Accepted;
 }
 
 @functions{
@@ -158,7 +163,7 @@
 		</small>
 		<div class="btn-toolbar">
 			<a condition="@canClaimAsJudge" asp-page="Edit" asp-route-id="@Model.Id" asp-page-handler="ClaimForJudging" class="btn btn-success mt-2 me-1">Claim</a>
-			<a condition="@ViewData.UserHas(PermissionTo.PublishMovies) && Model.Submission.Status == SubmissionStatus.Accepted" asp-page="Edit" asp-route-id="@Model.Id" asp-page-handler="ClaimForPublishing" class="btn btn-success mt-2 me-1">Claim</a>
+			<a condition="@canClaimAsPublisher" asp-page="Edit" asp-route-id="@Model.Id" asp-page-handler="ClaimForPublishing" class="btn btn-success mt-2 me-1">Claim</a>
 			<a asp-page="View" asp-page-handler="Download" asp-route-id="@Model.Id" class="btn btn-primary mt-2"><i class="fa fa-download"></i> Download</a>
 			<a condition="@Model.Submission.TopicId > 0" asp-page="/Forum/Topics/Index" asp-route-id="@Model.Submission.TopicId" class="btn btn-secondary ms-1 mt-2"><i class="fa fa-comments-o"></i> Discuss and Vote</a>
 			<span permission="EditSubmissions" class="btn-separator mt-2"></span>
