Send http 404 for various notfounds
I think it would be ideal to also eliminate the 302s, but this is a low effort attempt with reasonable results

--- a/TASVideos/Pages/Forum/NotFound.cshtml
+++ b/TASVideos/Pages/Forum/NotFound.cshtml
@@ -1,6 +1,7 @@
 ﻿@page
 @{
 	ViewData["Title"] = "Not Found";
+	HttpContext.Response.StatusCode = 404;
 }
 <partial Name="_ForumHeader" />
 <h4><a asp-page="Index">Forum Index</a></h4>
