--- a/TASVideos/Pages/Wiki/PageDoesNotExist.cshtml
+++ b/TASVideos/Pages/Wiki/PageDoesNotExist.cshtml
@@ -3,6 +3,7 @@
 	ViewData["Title"] = "DoesNotExist";
 	var url = PageContext.HttpContext.Request.Query["url"].ToString().Trim('/');
 	bool canEdit = WikiHelper.UserCanEditWikiPage(url, User.Name(), User.Permissions());
+	HttpContext.Response.StatusCode = 404;
 }
 <h2>This page does not yet exist.</h2>
 <br />
