--- a/TASVideos/Pages/Wiki/PageNotFound.cshtml
+++ b/TASVideos/Pages/Wiki/PageNotFound.cshtml
@@ -2,6 +2,7 @@
 @{
 	ViewData["Title"] = "NotFound";
 	var possibleUrl = PageContext.HttpContext.Request.Query["possibleUrl"].ToString().Trim();
+	HttpContext.Response.StatusCode = 404;
 }
 
 <h2>This URL is invalid and doesn't load.</h2>
