--- a/TASVideos/Pages/Shared/Components/Awards/Default.cshtml
+++ b/TASVideos/Pages/Shared/Components/Awards/Default.cshtml
@@ -28,26 +28,27 @@
 </row>
 <hr />
 <h2>Publication Awards</h2>
-@foreach (var award in Model.Where(m => m.Type == AwardType.Movie).OrderBy(m => m.ShortName))
-{
-	string awardName = $"{award.ShortName}_{award.Year.ToString()}";
-	<div class="mb-5">
-		<a id="@(award.ShortName)_@(award.Year)"></a>
-		<img class="float-start me-2" alt="@award.Description"
-			 srcset="/awards/@(awardName).png .5x,
+<row>
+	@foreach (var award in Model.Where(m => m.Type == AwardType.Movie).OrderBy(m => m.ShortName))
+	{
+		string awardName = $"{award.ShortName}_{award.Year.ToString()}";
+		<div class="col-md-4 col-sm-6 m-3">
+			<a id="@(award.ShortName)_@(award.Year)"></a>
+			<img class="float-start me-2" alt="@award.Description"
+				 srcset="/awards/@(awardName).png .5x,
 				/awards/@(awardName)-2x.png 1x,
 				/awards/@(awardName)-4x.png 2x"
-			 src="/awards/@(awardName)-2x.png" loading="lazy"/>
-		<div>
-			<strong>@award.Description</strong>
-			<br />
-			@foreach (var pub in award.Publications)
-			{
-
-				<pub-link id="pub.Id">@pub.Title</pub-link>
+				 src="/awards/@(awardName)-2x.png" loading="lazy" />
+			<div>
+				<strong>@award.Description</strong>
 				<br />
-			}
+				@foreach (var pub in award.Publications)
+				{
+					<pub-link id="pub.Id">@pub.Title</pub-link>
+					<br />
+				}
+			</div>
+			<br />
 		</div>
-		<br />
-	</div>
-}
+	}
+</row>
