Remove redundant diffview stylesheet include

--- a/TASVideos/Pages/Shared/_Layout.cshtml
+++ b/TASVideos/Pages/Shared/_Layout.cshtml
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
 	<meta charset="utf-8" />
@@ -7,11 +7,11 @@
 
 	<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous" />
+	<link rel="stylesheet" href="~/css/diffview.css" />
 	<link rel="stylesheet" href="/css/site.css" />
 	<link rel="stylesheet" id="style-dark-initial" href="/css/darkmode-initial.css" />
 	<link rel="stylesheet" href="~/lib/font-awesome/css/font-awesome.css" />
 
-	<link rel="stylesheet" href="~/css/diffview.css" />
 	<link href="~/css/prism.css" rel="stylesheet" />
 
 	<link rel="alternate" href="/news.rss" type="application/rss+xml" title="TASVideos RSS News Feed">
