Add customization for dark diffs
extract existing customization to the diffview library

--- a/TASVideos/wwwroot/css/partials/_colors.scss
+++ b/TASVideos/wwwroot/css/partials/_colors.scss
@@ -35,3 +35,9 @@ $bs-table-active-bg-dark: #373b3e;
 $bs-table-hover-bg-dark: #323539;
 $text-muted-dark: #818a92;
 $module-error-color: #f8d7da;
+$diff-replace: #fd8;
+$diff-replace-dark: #dba400;
+$diff-delete: #e99;
+$diff-delete-dark: #dc3545;
+$diff-insert: #9e9;
+$diff-insert-dark: #198754;
