--- a/TASVideos/wwwroot/css/site.scss
+++ b/TASVideos/wwwroot/css/site.scss
@@ -2,3 +2,4 @@
 @import "partials/variables";
 @import "partials/bootstrap-overrides";
 @import "partials/customizations";
+@import "partials/_diffview-overrides.scss";
