--- a/TASVideos/Pages/Shared/_MovieModule.cshtml
+++ b/TASVideos/Pages/Shared/_MovieModule.cshtml
@@ -110,8 +110,7 @@
 				<div>
 					<span permission="RateMovies">
 						<a asp-page="/Publications/Rate"
-						   asp-route-id="@Model.Id"
-						   asp-route-returnUrl="@Context.CurrentPathToReturnUrl()">
+						   asp-route-id="@Model.Id">
 							Rating
 						</a>: &nbsp;
 					</span>
