--- a/TASVideos/Pages/Shared/Components/MovieChangeLog/Default.cshtml
+++ b/TASVideos/Pages/Shared/Components/MovieChangeLog/Default.cshtml
@@ -1,25 +1,26 @@
 ﻿@model MovieHistoryModel
 <div>
-    @foreach (var pubGroup in Model.MovieHistory.OrderByDescending(p => p.Date))
-    {
-        <h4>@pubGroup.Date.ToShortDateString()</h4>
-        foreach (var pub in pubGroup.Pubs)
-        {
-                <div class="ms-2"><pub-link id="pub.Id">@pub.Name</pub-link>
-                @if (pub.IsNewGame)
-                {
-                    <span>(new game)</span>
-                }
-                else if (pub.IsNewBranch)
-                {
-                    <span>(new branch)</span>
-                }
-                else
-                {
-                    <span>(improvement)</span>
-                }
-                <br />
-                </div>
-        }
-    }
+	@foreach (var pubGroup in Model.MovieHistory.OrderByDescending(p => p.Date))
+	{
+		<h4>@pubGroup.Date.ToShortDateString()</h4>
+		foreach (var pub in pubGroup.Pubs)
+		{
+			<div class="ms-2">
+				<pub-link id="pub.Id">@pub.Name</pub-link>
+				@if (pub.IsNewGame)
+				{
+					<span>(new game)</span>
+				}
+				else if (pub.IsNewBranch)
+				{
+					<span>(new branch)</span>
+				}
+				else
+				{
+					<span>(improvement)</span>
+				}
+				<br />
+			</div>
+		}
+	}
 </div>
