--- a/TASVideos/Pages/Shared/Components/Awards/Default.cshtml
+++ b/TASVideos/Pages/Shared/Components/Awards/Default.cshtml
@@ -7,22 +7,18 @@
 		@*TODO: Fix the file names to be consistent*@
 		int year = award.Year > 2018 ? award.Year - 2000 : award.Year;
 		string awardName = $"{award.ShortName}_{year.ToString()}";
-		<div class="col-md-4 col-sm-6 m-3">
-			<img class="float-start" alt="@award.Description"
+		<div class="col-md-4 col-sm-6 mt-3">
+			<img alt="@award.Description"
 				 srcset="/awards/@(awardName).png .5x,
 					/awards/@(awardName)-2x.png 1x,
 					/awards/@(awardName)-4x.png 2x"
 				 src="/awards/@(awardName)-2x.png" loading="lazy" />
-			<div class="float-end">
-				<a id="@(award.ShortName)_@(award.Year)"></a>
-				<strong>@award.Description</strong>
-				<br />
-				@foreach (var user in award.Users)
-				{
-					<profile-link username="@user.UserName" class="float-end"></profile-link>
-					<br />
-				}
-			</div>
+			<a id="@(award.ShortName)_@(award.Year)"></a><br />
+			<strong>@award.Description</strong><br />
+			@foreach (var user in award.Users)
+			{
+				<profile-link username="@user.UserName"></profile-link><br />
+			}
 		</div>
 	}
 </row>
@@ -32,23 +28,18 @@
 	@foreach (var award in Model.Where(m => m.Type == AwardType.Movie).OrderBy(m => m.ShortName))
 	{
 		string awardName = $"{award.ShortName}_{award.Year.ToString()}";
-		<div class="col-md-4 col-sm-6 m-3">
+		<div class="col-md-4 col-sm-6 mt-3">
 			<a id="@(award.ShortName)_@(award.Year)"></a>
-			<img class="float-start me-2" alt="@award.Description"
+			<img alt="@award.Description"
 				 srcset="/awards/@(awardName).png .5x,
 				/awards/@(awardName)-2x.png 1x,
 				/awards/@(awardName)-4x.png 2x"
-				 src="/awards/@(awardName)-2x.png" loading="lazy" />
-			<div>
-				<strong>@award.Description</strong>
-				<br />
-				@foreach (var pub in award.Publications)
-				{
-					<pub-link id="pub.Id">@pub.Title</pub-link>
-					<br />
-				}
-			</div>
-			<br />
+				 src="/awards/@(awardName)-2x.png" loading="lazy" /><br />
+			<strong>@award.Description</strong><br />
+			@foreach (var pub in award.Publications)
+			{
+				<pub-link id="pub.Id">@pub.Title</pub-link><br />
+			}
 		</div>
 	}
 </row>
