--- a/TASVideos/Pages/Submissions/View.cshtml
+++ b/TASVideos/Pages/Submissions/View.cshtml
@@ -71,20 +71,13 @@
 			}
 			@*Populates the youtube player after the API script is ready*@
 			if (!player) {
-				@{
-				if (!string.IsNullOrEmpty(Model.Submission.EncodeEmbedLink)){
-					<text>
-						window.onYouTubeIframeAPIReady = () => {
-							player = new YT.Player('ytplayer', {
-								videoId: "@Model.Submission.EncodeEmbedLink.Split("/").Last()"
-							});
-						}
-					</text>
-				}
+				window.onYouTubeIframeAPIReady = () => {
+					player = new YT.Player('ytplayer', {
+						videoId: "@Model.Submission.EncodeEmbedLink!.Split("/").Last()"
+					});
 				}
 			}
 		</script>
-		<br />
 		<a href="@Model.Submission.EncodeEmbedLink">(Link to video)</a>
 	</div>
 	<div class="@(hasEncode ? "col-lg-6" : "col-lg-12")">
