allow editing of polls with votes, but restrict what can be edited, also allow negative numbers on days to open (otherwise editing closed polls forces it to be re-opened)

--- a/TASVideos/Pages/Forum/Topics/AddEditPoll.cshtml
+++ b/TASVideos/Pages/Forum/Topics/AddEditPoll.cshtml
@@ -3,6 +3,7 @@
 @{
 	var mode = Model.PollId.HasValue ? "Edit" : "Add";
 	ViewData["Title"] = $"{mode}ing Poll for Topic {Model.TopicTitle}";
+	ViewData["Restricted"] = Model.AnyVotes;
 }
 
 <partial Name="_ForumHeader" />
