--- a/TASVideos/Pages/Shared/_Award.cshtml
+++ b/TASVideos/Pages/Shared/_Award.cshtml
@@ -5,10 +5,8 @@
 	int longYear = Model.Year;
 	string awardName = $"{Model.ShortName}_{shortYear.ToString()}";
 }
-<a href="/Awards/@(longYear.ToString())#@(Model.ShortName)_@(shortYear)" title="Award - @Model.Description">
-	<img style="max-height: 48px;" 
+<a href="/Awards/@(longYear.ToString())#@(Model.ShortName)_@(shortYear)" title="Award - @Model.Description"><img style="max-height: 48px;" 
 		 srcset="/awards/@(awardName).png .5x,
 		 /awards/@(awardName)-2x.png 1x,
 		 /awards/@(awardName)-4x.png 2x"
-		 src="/awards/@(awardName)-2x.png" alt="@Model.Description" loading="lazy" />
-</a>
+		 src="/awards/@(awardName)-2x.png" alt="@Model.Description" loading="lazy" /></a>
