--- a/TASVideos/Pages/Account/EmailConfirmationSent.cshtml
+++ b/TASVideos/Pages/Account/EmailConfirmationSent.cshtml
@@ -1,6 +1,6 @@
 ﻿@page
 @{
-	ViewBag.Title = "Email Sent";
+	ViewData["Title"] = "Email Sent";
 }
 
 <p>To complete the registration process look for an email in your inbox that will provide further instructions.</p>
