fix typo, remove an unused using

--- a/TASVideos/Pages/Profile/Index.cshtml
+++ b/TASVideos/Pages/Profile/Index.cshtml
@@ -10,7 +10,7 @@
 		Until your email is confirmed, you will not have any roles associated with your account and will not be able to do things such as post on the forums, submit movies, or rate movies
 	</p>
 	<p>
-		You should have already received a confirmation email. If you did not recieve it, try checking your spam folder or you can resend the email confirmation
+		You should have already received a confirmation email. If you did not receive it, try checking your spam folder or you can resend the email confirmation
 		<br />
 	</p>
 	<form method="post" asp-page="/Account/SendConfirmationEmail">
