--- a/TASVideos/Pages/Profile/Index.cshtml
+++ b/TASVideos/Pages/Profile/Index.cshtml
@@ -4,5 +4,17 @@
 	ViewData.AddActivePage(ProfileNavPages.Index);
 	ViewData["Title"] = "My Profile";
 }
-
+<warning-alert Condition="!Model.Profile.EmailConfirmed">
+	<h5>Your email is not confirmed!</h5>
+	<p>
+		Until your email is confirmed, you will not have any roles associated with your account and will not be able to do things such as post on the forums, submit movies, or rate movies
+	</p>
+	<p>
+		You should have already received a confirmation email. If you did not receive it, try checking your spam folder or you can resend the email confirmation
+		<br />
+	</p>
+	<form method="post" asp-page="/Account/SendConfirmationEmail">
+		<button type="submit" class="btn btn-warning">Resend Confirmation Email</button>
+	</form>
+</warning-alert>
 <partial name="_Profile" model="Model.Profile" />
