--- a/TASVideos/Pages/Shared/_Profile.cshtml
+++ b/TASVideos/Pages/Shared/_Profile.cshtml
@@ -5,7 +5,7 @@
 		<card>
 			<cardheader>
 				<h4>
-					<a condition="User.IsLoggedIn()"
+					<a condition="User.IsLoggedIn() && User.Name() != Model.UserName"
 					   asp-page="/Messages/Create"
 					   asp-route-defaultToUser="@Model.UserName"
 					   class="btn btn-secondary btn-sm">
