More intelligible error display on wiki syntax error
Closes #574.
This was painful to write; we need to abstract the AST away from the view layer, and maybe create a stronger view layer.  Or maybe not.

--- a/TASVideos/wwwroot/css/partials/_customizations.scss
+++ b/TASVideos/wwwroot/css/partials/_customizations.scss
@@ -97,6 +97,11 @@ article.wiki, .postbody {
 	border: 2px solid var(--bs-danger);
 	background-color: var(--bs-white);
 	padding: 20px;
+
+	.info {
+		color: var(--bs-danger);
+		font-weight: bold;
+	}
 }
 
 .error-marker {
