--- a/TASVideos/wwwroot/css/partials/_bootstrap-overrides.scss
+++ b/TASVideos/wwwroot/css/partials/_bootstrap-overrides.scss
@@ -83,7 +83,7 @@ h4 {
 		background-color: var(--bs-primary);
 		border-color: var(--bs-primary);
 
-		&.active, &:active, &:hover {
+		.btn-check:focus+&, .btn-check:active+&, .btn-check:checked+&, &.active, &:focus, &:active, &:hover, .show>&.dropdown-toggle {
 			background-color: var(--bs-primary-hover);
 			border-color: var(--bs-primary-hover);
 		}
@@ -93,7 +93,7 @@ h4 {
 		background-color: var(--bs-secondary);
 		border-color: var(--bs-secondary);
 
-		&.active, &:active, &:hover {
+		.btn-check:focus+&, .btn-check:active+&, .btn-check:checked+&, &.active, &:focus, &:active, &:hover, .show>&.dropdown-toggle {
 			background-color: var(--bs-secondary-hover);
 			border-color: var(--bs-secondary-hover);
 		}
